prettify touch-scroll area

--- a/images/CMakeLists.txt
+++ b/images/CMakeLists.txt
@@ -4,5 +4,6 @@
 install(
         FILES
         splash_screen.png
+        touch_icon.png
         DESTINATION ${DATA_INSTALL_DIR}/choqok/images
 )
